# depthcharge

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py  versions.json
.github/workflows/: black.yml  docs.yml  lint.yml  publish.yml  tests.yml
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
api/: index.html
api/datasets/: index.html
api/encoders/: index.html
api/primitives/: index.html
api/tokenizers/: index.html
api/transformers/: index.html
data/: README.md  TMT10-Trial-8.mgf  TMT10-Trial-8.mzML  TMT10-Trial-8.mzXML
depthcharge/: __init__.py  constants.py  feedforward.py  masses.py  mixins.py  primitives.py  testing.py  utils.py  version.py
depthcharge/base/: dataclasses.py
depthcharge/components/: __init__.py  encoders.py  feedforward.py  mixins.py  transformers.py
depthcharge/data/: __init__.py  analyte_datasets.py  arrow.py  datasets.py  fields.py  hdf5.py  loaders.py  parse.py  parsers.py  peptide_datasets.py  preprocessing.py  spectrum_datasets.py
depthcharge/denovo/: __init__.py  dataloaders.py  evaluate.py  model.py  train.py
depthcharge/embed/: __init__.py  data.py  dataloaders.py  model.py  performance.py  similarity.py  splits.py  train.py
depthcharge/embedder/: SPLITS.csv  __init__.py  data.py  dataloaders.py  model.py  performance.py  splits.py  train.py
depthcharge/encoders/: __init__.py  sinusoidal.py
depthcharge/models/: __init__.py
depthcharge/models/denovo/: __init__.py  dataloaders.py  model.py
depthcharge/models/embed/: __init__.py  dataloaders.py  model.py
depthcharge/tokenizers/: __init__.py  molecules.py  peptides.py  tokenizer.py
depthcharge/transformers/: __init__.py  analytes.py  peptides.py  spectra.py
depthcharge/utils/: masses.py  misc.py
dev/: embedder_data_splits.py
docs/: index.md
docs/api/: datasets.md  encoders.md  index.md  primitives.md  tokenizers.md  transformers.md
docs/building-blocks/: components.md  data.md  index.md
docs/getting-started/: installation.md
docs/stylesheets/: extra.css
getting-started/installation/: index.html
main/: 404.html  index.html  objects.inv
main/CHANGELOG/: index.html
main/CODE_OF_CONDUCT/: index.html
main/CONTRIBUTING/: index.html
main/api/: index.html
main/api/datasets/: index.html
main/api/encoders/: index.html
main/api/primitives/: index.html
main/api/tokenizers/: index.html
main/api/transformers/: index.html
main/getting-started/: TMT10-Trial-8.parquet  spectra.qmd
main/getting-started/installation/: index.html
main/getting-started/spectra/: index.html
stylesheets/: extra.css
tests/: conftest.py
tests/unit_tests/: test_denovo.py  test_feedforward.py  test_masses.py  test_primitives.py  test_testing.py  test_utils.py  test_version.py
tests/unit_tests/test_base/: test_dataclasses.py
tests/unit_tests/test_components/: test_encoders.py  test_transformers.py
tests/unit_tests/test_data/: test_arrow.py  test_datasets.py  test_index.py  test_loaders.py  test_parsers.py
tests/unit_tests/test_encoders/: test_sinusoidal.py
tests/unit_tests/test_tokenizers/: test_molecules.py  test_peptides.py
tests/unit_tests/test_transformers/: test_analyte_transformers.py  test_peptide_transformers.py  test_peptides.py  test_spectra.py  test_spectrum_transformers.py
v0.4.1/: 404.html  index.html
v0.4.1/CODE_OF_CONDUCT/: index.html
v0.4.1/api/: index.html
v0.4.1/api/primitives/: index.html
v0.4.2/CHANGELOG/: index.html
v0.4.2/CONTRIBUTING/: index.html
v0.4.2/api/encoders/: index.html
v0.4.2/api/primitives/: index.html
v0.4.2/api/tokenizers/: index.html
v0.4.2/api/transformers/: index.html
v0.4.2/getting-started/: TMT10-Trial-8.parquet  spectra.qmd
v0.4.2/getting-started/spectra/: index.html
v0.4.2/stylesheets/: extra.css
v0.4.6/api/: index.html
v0.4.6/api/tokenizers/: index.html
v0.4.6/api/transformers/: index.html
v0.4.6/getting-started/: TMT10-Trial-8.parquet
v0.4.7/: index.html  objects.inv
v0.4.7/CHANGELOG/: index.html
v0.4.7/api/datasets/: index.html
v0.4.7/api/encoders/: index.html
v0.4.7/getting-started/spectra/: index.html
