[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "depthcharge-ms"
authors = [{name = "William E. Fondrie", email = "fondriew@gmail.com"}]
description = "A mass spectrometry toolkit for deep learning with Transformer models."
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=1.11.0",
    "pyteomics>=4.4.2",
    "numpy>=1.18.1",
    "numba>=0.48.0",
    "lxml>=4.9.1",
    "h5py>=3.7.0",
    "einops>=0.4.1",
    "tqdm>=4.65.0",
    "lark>=1.1.4",
    "selfies>=2.1.1",
    "sortedcontainers>=2.4.0",
    "dill>=0.3.6",
    "rdkit>=2023.03.1",
    "pillow>=9.4.0",
    "spectrum-utils>=0.4.1",
]
dynamic = ["version"]

[project.readme]
file = "REAMDE.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/wfondrie/depthcharge"
Documentation = "https://wfondrie.github.io/depthcharge"

[project.optional-dependencies]
docs = [
     "mkdocs",
     "mkdocs-material",
     "mkdocstrings[python]>=0.18",
]
dev = [
    "pre-commit>=2.7.1"
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]

[tool.ruff]
select = ["E", "F", "W", "C", "I", "D", "UP", "N", "ANN", "T20"]

# ANN101 Missing type annotation for `self` in method
# D213 Multi-line docstring summary should start at the second lin
# D203 1 blank line required before class docstring
# D100 Missing docstring in public module
# ANN102 Missing type annotation for `cls` in classmethod
# D401 First line of docstring should be in imperative mood
ignore = ["D213", "ANN101", "D203", "D100", "ANN102", "D401"]
fix = true

[tool.ruff.per-file-ignores]
"*tests/*.py" = ["ANN", "N806"]
"__init__.py" = ["F401", "D104"]
"depthcharge/encoders/sinusoidal.py" = ["N803"]
"depthcharge/feedforward.py" = ["N803"]

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
