[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "depthcharge-ms"
authors = [{name = "William E. Fondrie", email = "fondriew@gmail.com"}]
description = "A mass spectrometry toolkit for deep learning with Transformer models."
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "polars>=0.19.0",
    "pyarrow>=12.0.1",
    "pylance>=0.7.5",
    "pyteomics>=4.7.2",
    "numpy>=1.18.1",
    "numba>=0.48.0",
    "lxml>=4.9.1",
    "einops>=0.4.1",
    "tqdm>=4.65.0",
    "lark>=1.1.4",
    "selfies>=2.1.1",
    "sortedcontainers>=2.4.0",
    "dill>=0.3.6",
    "rdkit>=2023.03.1",
    "pillow>=9.4.0",
    "spectrum-utils>=0.4.1",
    "cloudpathlib>=0.18.1",
    "psims>=1.3.3"
]
dynamic = ["version"]

[project.readme]
file = "REAMDE.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/wfondrie/depthcharge"
Documentation = "https://wfondrie.github.io/depthcharge"

[project.optional-dependencies]
docs = [
     "mike",
     "mkdocs",
     "mkdocs-material",
     "mkdocstrings[python]>=0.18",
     "mkquartodocs",
]
dev = [
    "pre-commit>=2.7.1"
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C", "I", "D", "UP", "N", "T20"]

# ANN101 Missing type annotation for `self` in method
# D213 Multi-line docstring summary should start at the second lin
# D203 1 blank line required before class docstring
# D100 Missing docstring in public module
# ANN102 Missing type annotation for `cls` in classmethod
# D401 First line of docstring should be in imperative mood
ignore = ["D213", "ANN101", "D203", "D100", "ANN102", "D401"]

[tool.ruff.lint.per-file-ignores]
"*tests/*.py" = ["ANN", "N806", "C408"]
"__init__.py" = ["F401", "D104"]
"depthcharge/encoders/sinusoidal.py" = ["N803"]
"depthcharge/feedforward.py" = ["N803"]
