[metadata]
name = depthcharge-ms
author = William E. Fondrie
author_email = fondriew@gmail.com
description =
    A deep learning toolkit for proteomics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wfondrie/depthcharge
project_urls =
    Documentation = https://depthcharge.readthedocs.io
    Bug Tracker = https://github.com/wfondrie/depthcharge/issues
    Discussion Board = https://github.com/wfondrie/depthcharge/discussions
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.7
install_requires =
    torch>=1.11.0
    pyteomics>=4.4.2
    numpy>=1.18.1
    pandas>=1.0.3
    numba>=0.48.0
    lxml
    h5py
    einops
    pytorch-lightning
    ppx

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mkdocstrings
dev =
    pre-commit>=2.7.1
    black>=19.10b0

[options.entry_points]
console_scripts =
    depthcharge = depthcharge.depthcharge:main
